// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput test match last snapshot 1`] = `
<Container
  selectedFile={null}
>
  <input
    className="inputFile"
    id="fileInput"
    onChange={[Function]}
    type="file"
  />
  <ButtonContainer>
    <label
      htmlFor="fileInput"
    >
      <Button
        buttonType="outline"
        icon="file"
        id="uploadButton"
        onClick={[Function]}
        type="button"
      >
        Choose file
      </Button>
    </label>
  </ButtonContainer>
</Container>
`;

exports[`FileInput test match last snapshot with a file selected 1`] = `
<Container
  selectedFile="hello"
>
  <input
    className="inputFile"
    id="fileInput"
    onChange={[Function]}
    type="file"
  />
  <ButtonContainer>
    <label
      htmlFor="fileInput"
    >
      <Button
        buttonType="outline"
        icon="upload"
        id="uploadButton"
        onClick={[Function]}
        type="button"
      >
        Upload file
      </Button>
    </label>
    <Button
      buttonType="ghost"
      icon="times"
      onClickIcon={[Function]}
      type="button"
    />
  </ButtonContainer>
</Container>
`;
